change db string

--- a/BreakOutBox/appsettings.json
+++ b/BreakOutBox/appsettings.json
@@ -1,7 +1,8 @@
 ﻿{
   "ConnectionStrings": {
+    //"DefaultConnection": "Data Source=.;Initial Catalog=BreakOutBox;Integrated Security=True"
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BreakOutBox;Trusted_Connection=True;MultipleActiveResultSets=true"
-    "DefaultConnection": "Server=.\\sqlexpress;Database=BreakOutBox;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=.\\mssqllocaldb;Database=BreakOutBox;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
