--- a/BreakOutBox/appsettings.json
+++ b/BreakOutBox/appsettings.json
@@ -1,5 +1,10 @@
 ﻿{
   "ConnectionStrings": {
+    // Origineel
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BreakOutBox;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\sqlexpress;Database=BreakOutBox;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+    // Daan's additions
     //"DefaultConnection": "Data Source=.;Initial Catalog=BreakOutBox;Integrated Security=True"
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BreakOutBox;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"DefaultConnection": "Server=.\\mssqllocaldb;Database=BreakOutBox;Trusted_Connection=True;MultipleActiveResultSets=true"
